--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rubbi",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "description": "收集一些好用的工具函数",
     "main": "index.js",
     "scripts": {
@@ -21,9 +21,7 @@
     "license": "ISC",
     "devDependencies": {
         "jshint": "^2.10.2",
-        "babel-eslint": "^10.0.2",
-        "jest": "^24.8.0",
-        "supertest": "^4.0.2"
+        "jest": "^24.8.0"
     },
     "engines": {
         "node": ">= 8.1.4"
